<resources>
    <string name="app_name">CreditCardApp</string>
    <string name="nome">Nome:</string>
    <string name="card_name">Ourocard</string>
    <string name="bb_logo">BB Logo</string>
    <string name="client_name">Cliente da Silva</string>
    <string name="card_number">0000 1111 2222 3333</string>
    <string name="expiration_date">12/25</string>
    <string name="data_exp">Data \nExp.</string>
    <string name="cvv">CVV</string>
    <string name="cvv_text">000</string>
</resources>